--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
       <section class="product">
         <div class="Pic">
           <div class="cir"></div>
-          <img src="images/watch02.png" alt="">
+          <img src="images/watch03.png" alt="">
         </div>
         <div class="Content">
-          <h3>Committed to the best Quality and results</h3>
+          <h3>The best product for the best time</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. repudiandae voluptate fugit inventore!</p>
           <button>Buy Now</button>
         </div>
@@ -161,16 +161,47 @@
       <section class="product">
         <div class="Pic">
           <div class="cir"></div>
-          <img src="images/watch02.png" alt="">
+          <img src="images/watch04.png" alt="">
         </div>
         <div class="Content">
-          <h3>Committed to the best Quality and results</h3>
+          <h3>Universal timekeepers of the world</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. repudiandae voluptate fugit inventore!</p>
           <button>Buy Now</button>
         </div>
       </section>
     </main>
-
+    <footer>
+      <div class="info">
+        <div class="services">
+          <h5>Services</h5>
+          <p>Online Support</p>
+          <p>Physical stores</p>
+          <p>Q&A</p>
+        </div>
+        <div class="aboutus">
+          <h5>About us</h5>
+          <p>News</p>
+          <p>Events</p>
+          <p>Job Opportunities</p>
+        </div>
+        <div class="contact">
+          <h5>About us</h5>
+          <p>abc road -1234567</p>
+          <p>+886 12345678</p>
+          <p>abc123@gmail.com</p>
+        </div>
+      </div>
+      <div class="brands">
+        <p>Copyright © 2023 by Wesley Wang / S.C.WANG | All rights Reserved.</p>
+        <div class="logo">
+          <i class="fa-solid fa-clock"></i>
+          <i class="fa-brands fa-square-facebook"></i>
+          <i class="fa-brands fa-square-twitter"></i>
+          <i class="fa-brands fa-linkedin"></i> 
+          <i class="fa-brands fa-square-instagram"></i>
+        </div>
+      </div>
+    </footer>
     <script src="js/script.js"> </script>
     <script src="js/all.min.js"></script>
     <script src="js/jquery-3.6.4.min.js"></script>
