--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- nav -->
     <div class="navbar" id="navbar">
-        <a href="#" class="logo"><i class="fa-solid fa-clock"></i></a>
+        <a href="#" class="logo"><img src="images/logo.png" alt=""></i></a>
         <ul>
             <a href=""><li>Features</li></a>
             <a href=""><li>Picking</li></a>
@@ -35,9 +35,9 @@
             <h1>The perfect moment</h1>
             <h2>Between past and future</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis libero totam, distinctio adipisci dolores aliquid voluptate repellat repudiandae veniam recusandae?</p>
-            <a href="">Order Now</a>
-            <a href="">Explore more</a>
-            <p>Already a member og our company? <span>Sign in</span></p>
+            <a href="#" class="btn">Order Now</a>
+            <a href="#" class="btn">Explore More</a>
+            <p>Already a member of our company? <a class="signin" href="#">Sign in</a></p>
             <div class="badge">
               <i class="fa-solid fa-medal"></i>
               <span>20+ Win <br> Top Award</span>
